# AC215_Dashers

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  dvc.yaml  environment.yml  pyproject.toml  pytest.ini  requirements-test.txt
.dvc/: config
.github/workflows/: cd-k8s.yml  main.yml  ml-pipeline.yml  ml_pipeline.yml
data/: recipe_qa.csv.dvc
notebooks/: Object_detection_documentation.md  container.ipynb  container_screenshot.md  dvc_retrieval.ipynb  eda.ipynb  font-end.txt  front-end.txt  llm_performance.ipynb  llm_performance.md
src/: .gitignore
src/api-service/: Dockerfile  Pipfile  docker-entrypoint.sh  docker-shell.sh
src/api-service/api/: service.py
src/data-processor/: .gitignore  cli.py  docker-shell.sh
src/data-versioning/: .gitignore  README.md  docker-entrypoint.sh  docker-shell.sh  llm_training_data.dvc
src/datapipeline/: .coveragerc  .gitignore  Dockerfile  Pipfile  cli_rag.py  docker-compose.yml  docker-entrypoint.sh  docker-shell.sh  requirements.txt
src/deployment/: .docker-tag  .gitignore  README.md  deploy-create-instance.yml  deploy-k8s-create-cluster.yml  deploy-k8s-setup-containers.yml  deploy-k8s-update.sh  deploy-setup-containers.yml  deploy-setup-webserver.yml  docker-entrypoint.sh  docker-registration-GCR.md  docker-shell.sh  inventory.yml  register-docker-images.yml  update-k8s-cluster.yml  update-k8s-containers.yml
src/food-detection/: Dockerfile  Pipfile  README.md  docker-compose.yml  docker-shell.sh  gemini-object-detection.py  gemini_object_detection.py  gpt-object-detection.py  gpt_object_detection.py
src/food_detection/: docker-compose.yml  docker-shell.sh  gemini_object_detection.py  gpt-object-detection.py
src/frontend_react/: .env.development  .env.production  next.config.js  package-lock.json  package.json
src/genai/: prompt_template.py  vector_index.py
src/genai/dm/: run_dm_index.py
src/genai/eyfs/: eyfs.py  run_classifier.py  run_pinecone_index.py
src/genai/parenting_chatbot/: run_nhs_index.py  run_nhs_index_full_page.py
src/genai/streamlit_pages/: dm_page.py  eli3_page.py  eyfs_page.py  (+4 more)
src/llm_finetuning/: .gitignore  README.md  env.dev
src/ml-pipeline/: .gitignore  Pipfile  README.md  build_docker.yaml  cli.py  data-processor-pipeline.yaml  data_process.py  docker-entrypoint.sh  docker-shell.sh  evaluation.py  model-evaluation-pipeline.yaml  model-training-pipeline.yaml  model.py  model_evaluation.py  model_training.py  pipeline.yaml  run-data_processor.sh  run-ml_pipeline.sh  run-model_training.sh
src/outputs/: recipe_small.jsonl
tests/: README.md
tests/api-service/: test_chat_utils.py  test_llm_chat.py  test_llm_detection_chat.py  test_llm_detection_utils.py  test_llm_rag_chat.py  test_llm_rag_utils.py  test_llm_utils.py  test_service.py  test_youtube.py
tests/datapipeline/: test_cli_rag.py
tests/food-detection/: test_gemini_object_detection.py  test_gpt_object_detection.py
tests/integration/: docker-compose.yml  docker-shell.sh  test_api_service.py  test_front_end.py  test_integration.py
tests/ml-pipeline/: test_cli.py  test_data_process.py  test_model_evaluation.py  test_model_training.py
tests/system/: test_api_service.py
(+39 files in other folders)
